; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_thr.c_sys_thr_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_thr.c_sys_thr_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.thr_create_args = type { i32, i32 }
%struct.thr_create_initthr_args = type { i32, i32 }

@thr_create_initthr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_thr_create(%struct.thread* %0, %struct.thr_create_args* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.thread*, align 8
  %5 = alloca %struct.thr_create_args*, align 8
  %6 = alloca %struct.thr_create_initthr_args, align 4
  %7 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %4, align 8
  store %struct.thr_create_args* %1, %struct.thr_create_args** %5, align 8
  %8 = load %struct.thr_create_args*, %struct.thr_create_args** %5, align 8
  %9 = getelementptr inbounds %struct.thr_create_args, %struct.thr_create_args* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = getelementptr inbounds %struct.thr_create_initthr_args, %struct.thr_create_initthr_args* %6, i32 0, i32 1
  %12 = call i32 @copyin(i32 %10, i32* %11, i32 4)
  store i32 %12, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %7, align 4
  store i32 %15, i32* %3, align 4
  br label %24

16:                                               ; preds = %2
  %17 = load %struct.thr_create_args*, %struct.thr_create_args** %5, align 8
  %18 = getelementptr inbounds %struct.thr_create_args, %struct.thr_create_args* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = getelementptr inbounds %struct.thr_create_initthr_args, %struct.thr_create_initthr_args* %6, i32 0, i32 0
  store i32 %19, i32* %20, align 4
  %21 = load %struct.thread*, %struct.thread** %4, align 8
  %22 = load i32, i32* @thr_create_initthr, align 4
  %23 = call i32 @thread_create(%struct.thread* %21, i32* null, i32 %22, %struct.thr_create_initthr_args* %6)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %16, %14
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @copyin(i32, i32*, i32) #1

declare dso_local i32 @thread_create(%struct.thread*, i32*, i32, %struct.thr_create_initthr_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
